Fixed styling of code, especially in list items, to be more readable when the lines are long

--- a/resources/css/aphiria.scss
+++ b/resources/css/aphiria.scss
@@ -381,8 +381,11 @@ p code, li code {
     background: $codeBackgroundColor !important;
     padding: $verticalPadding 5px !important;
     font-size: $fontSize - 2*$verticalPadding + 1px !important;
-    white-space: nowrap !important;
-    border: 1px solid #d9d9d9 !important;
+}
+
+p code {
+    border: 1px solid #e9e9e9 !important;
+    white-space: pre !important;
 }
 
 body.home > main {
